<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="40dp">
        <TextView
            android:id="@+id/tituloPrincipal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tituloPricipal"
            android:textColor="@color/titulo"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:textSize="40dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tituloPrincipal"
            android:layout_marginBottom="15dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fecha"
            android:gravity="center_horizontal"
            android:layout_below="@+id/tilNombre"/>
        <DatePicker
            android:id="@+id/dpFecha"
            android:outlineSpotShadowColor="@color/colorAccent"
            android:calendarTextColor="@color/colorAccent"
            android:layout_centerHorizontal="true"
            android:calendarViewShown="false"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:layout_below="@+id/tvFecha"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilTelefono"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dpFecha"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telfono"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilTelefono"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilEmail"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/tilDescripcion"/>

    </RelativeLayout>

</ScrollView>